# CacheCow

./: .replit  pyproject.toml  replit.nix  requirements.txt
attached_assets/: Pasted-Objective-This-agent-will-handle-code-generation-execution-and-automation-for-CacheCow-using-GPT--1741438355378.txt
src/: config.py  main.py
src/models/: request_models.py  response_models.py
src/routes/: api.py
src/services/: gpt4all_service.py  service_container.py
src/utils/: exceptions.py  logger.py  model_downloader.py
