[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cmake>=3.31.6",
    "fastapi>=0.115.11",
    "numpy>=2.2.3",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "pyllamacpp>=2.4.3",
    "scikit-build>=0.18.1",
    "uvicorn>=0.34.0",
]
